--- a/calculadora/estilos.css
+++ b/calculadora/estilos.css
@@ -27,7 +27,7 @@ form p{
 	font-size: 30px;
 }
 
-input[type="text"]{
+input[type="number"]{
 	width: 100%;
 	margin-bottom: 20px;
 	padding: 20px;
@@ -46,4 +46,9 @@ form .btn{
 	padding: 30px;
 	display: inline-block;	
 	text-decoration: none;
+}
+
+footer p{
+	text-align: center;
+	color: white;
 }
